# 2025-p1-jaden-z-fng

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
