[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "jaden-z-fng",email = "jfang5768@gmail.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
flask = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
